<?xml version="1.0"?>
<package>
  <name>multicar_hydraulic</name>
  <version>0.1.0</version>
  <description>Translate Commands into can messages for the multicar hydraulic</description>
  <maintainer email="fischerm@htw-dresden.de">M. Fischer</maintainer>
  <author>M.Fischer</author>
  <license>MIT</license>
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <build_depend>tinycan</build_depend>
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tinycan</run_depend>
</package>
