<?xml version="1.0"?>
<package>
  <name>tinkerforge_laser_transform</name>
  <version>0.1.0</version>
  <description>Subscribe pcl data from laserscanner and transform it with tinkerforge imu orientation to new pcl</description>
  <maintainer email="fischerm@htw-dresden.de">M. Fischer</maintainer>
  <author>M.Fischer</author>
  <license>MIT</license>
  <url>http://wiki.ros.org/tinkerforge_laser_transform</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <export>
  </export>
</package>
