<?xml version="1.0"?>
<package>
  <name>tinycan</name>
  <version>0.1.0</version>
  <description>TinyCan Interface</description>
  <maintainer email="fischerm@htw-dresden.de">M. Fischer</maintainer>
  <author>M.Fischer</author>
  <license>MIT</license>
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
